# XOR

./: .gitignore  README.md
XorFileModifier/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
